<resources>
    <string name="app_name">HappyMatch</string>
    <string name="signin_text">欢迎登录开心搭配！</string>
    <string name="login"> 登  录 </string>
    <string name="rememberpwd"> 记住密码 </string>
    <string name="frogetpwd"> 忘记密码？ </string>
    <string name="registerwords"> 哎呀妈呀，还没有账户？俺要 </string>
    <string name="register"> 注 册 </string>
    <string name="passwordhint">请输入您的密码</string>
    <string name="usernamehint">请输入您的用户名</string>
    <string name="personalInfo"> 个人信息 </string>
    <string name="passwordhinttwo">请再次输入您的密码</string>
    <string name="mailhint">请输入您的邮箱账号</string>
    <string name="sexhint">请输入您的性别</string>
    <string name="heighthint">请输入您的身高</string>
    <string name="scalehint">请输入您的腰上下身高比例</string>
    <string name="backword"> 返 回 </string>

    <!--Check-->
    <string name="tip_username_null"> 用户名不能为空，请输入您的用户名。</string>
    <string name="tip_password_null"> 密码不能为空，请输入您的。</string>
    <string name="tip_username_wrong"> 此用户尚未注册，请注册后再登录。</string>
    <string name="tip_password_wrong"> 密码错误，请重新输入，或利用邮箱找回密码。</string>
    <string name="tip_null"> 星号标注项目是必须输入项目，请您输入完整信息。</string>
    <string name="tip_password_not_same"> 两次输入密码不一致，请确认后重新输入。</string>
    <string name="tip_mail_format"> 为方便您找回密码，请您输入正确的邮箱地址。</string>
    <string name="tip_user_is_registered"> 用户名已被注册，请您换个有个性的名字吧。</string>

    <string-array name="sexItems">
        <item>女</item>
        <item>男</item>　
    </string-array>

    <string-array name="topLowItems">
        <item>Top</item>
        <item>Low</item>　
    </string-array>

    <!-- home tab button -->
    <string name="main">"Match"</string>
    <string name="add">"添加"</string>
    <string name="make_one">"组合"</string>
    <string name="setting_more">更多</string>
    <!-- Add tab button -->
    <string name="selectbutton">" 选择 "</string>
    <string name="uploadbutton">" 上传 "</string>
    <string name="changebutton">" 转换 "</string>
    <string name="radiotypesimple">" 简单裁切 "</string>
    <string name="radiotypesimplex">" 精细裁切 "</string>
    <string name="addline">" 请添加腰部缝合线 "</string>

    <!-- Create tab button -->
    <string name="createbutton">" 合成 "</string>
    <string name="modifybutton">" 调整 "</string>
    <string name="sharebutton">" 分享 "</string>

    <!-- More tab info -->
    <string name="informationtext">" 通知 "</string>
    <string name="settingstext">" 设定 "</string>
    <string name="feedbacktext">" 用户反馈 "</string>
    <string name="recommandtext">" 推荐好友 "</string>
    <string name="clearcachetext">" 清除缓存 "</string>
    <string name="permission_camera_rationale">" 请圣上下旨，给予特权"</string>
    <string name="take_photo"> "拍照"</string>
    <string name="pick_photo"> "从相册选择"</string>
    <string name="cancel">"取消"</string>

</resources>
