<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/TopImage"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"/>

    <LinearLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="#FFF5EE"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_height="0dp">

        <LinearLayout
            android:id="@+id/layoutBtnTop"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnSelectTop"
                android:text="@string/selectbutton"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:background="@drawable/selector_button_color"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnUploadTop"
                android:text="@string/uploadbutton"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:background="@drawable/selector_button_color"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnChangeTop"
                android:text="@string/changebutton"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:background="@drawable/selector_button_color"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/btnRadio1"
                android:text="@string/radiotypesimple"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/selector_button_color"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold"/>
            <RadioButton
                android:id="@+id/btnRadio2"
                android:text="@string/radiotypesimplex"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@drawable/selector_button_color"
                android:textColor="#ffffff"
                android:textSize="20dp"
                android:textStyle="bold"/>

        </LinearLayout>
        <Button
            android:id="@+id/addLineTopBtn"
            android:text="@string/addline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="#B4EEB4"
            android:textColor="@color/colorAccent"
            android:textSize="20dp"
            android:textStyle="bold"/>
        <TextView
            android:gravity="center"
            android:text="提示：裁切类型是保留按钮，之后完善，请原谅....."
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:textColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>