<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/TopImage"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:background="@drawable/dog"
        android:layout_height="0dp"/>

    <LinearLayout
        android:id="@+id/layoutBtnCreate"
        android:background="@drawable/border"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btnCreate"
            android:text="@string/createbutton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:background="#29b6f6"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnModify"
            android:text="@string/modifybutton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:background="#29b6f6"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnshare"
            android:text="@string/sharebutton"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:background="#29b6f6"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>